<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#5f8eb0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/userprofile"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            android:background="#add993"
            tools:ignore="UselessParent">

            <TableRow
                android:id="@+id/row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/age"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/lives_in"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lives"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>


            <TableRow
                android:id="@+id/row4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/from"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/from"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/studied_in"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/studied"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/works_at"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/works"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/current_position"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/position"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/e_mail"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/mail"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:id="@+id/row9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#90d6d1">

                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/phone"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_margin="10dp"
                    android:layout_weight="100"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textSize="20sp" />
            </TableRow>


        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

